--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@ code {
 .card-list {
   display: flex;
   padding: 10px;
+  flex-wrap: wrap
 }
 
 .card{
@@ -26,6 +27,10 @@ code {
   padding: 10px;
   width: 200px;
   margin: 10px;
+}
+
+.card > *{
+  margin-bottom: 5px;
 }
 
 .card > img{
